# codefinetuner

./: .dockerignore  .dockeringore  .gitignore  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  pyproject.toml
.github/workflows/: release.yaml  release_test.yaml  tests.yaml
config/: codefinetuner_config.yaml  language_block_definitions.json
docs/: config-file.md  inference-vscode.md  install-nvidia-l4-driver.md  tree-sitter-customization.md
docs/configuration/: config-file.md
docs/example-runs/st-example/outputs/evaluate/datasets/: benchmark_dataset.jsonl
docs/example-runs/st-example/outputs/preprocess/results/datasets/: test_dataset.jsonl
docs/finetuning_example/st_example/: clean_st_code.py  finetuning-example-st.md
docs/finetuning_example/st_example/config/: codefinetuner_config.yaml
docs/finetuning_example/st_example/outputs/evaluate/results/: analysis_results.json  evaluation_results.jsonl
docs/finetuning_example/st_example/outputs/finetune/results/: trainer_log.json
docs/finetuning_example/st_example/outputs/preprocess/results/: split_log.jsonl
docs/finetuning_example/st_example/outputs/preprocess/results/datasets/: eval_dataset.jsonl
docs/inference-llama-vscode/: inference-vscode.md
docs/runpod/: setup-runpod.md
docs/runpod-setup/: setup-runpod.md
scripts/: analyze_dataset.py  backup_finetuned.py  decode_dataset.py  merge_lora_adapter_and_save.py  plot_loss.py  print_treesitter_tree.py  save_base_hf_model.py  test_ast_parser.py  unzip_all_in_directory.py
src/: create_benchmark_dataset.py  evaluate_model.py  generate_from_model.py
src/codefinetuner/: __init__.py  pipeline.py
src/codefinetuner/convert/: __init__.py  config.py  run.py
src/codefinetuner/evaluate/: __init__.py  analyze.py  benchmark.py  config.py  evaluate.py  generate.py  metrics.py  run.py
src/codefinetuner/finetune/: __init__.py  config.py  model.py  run.py  train.py
src/codefinetuner/preprocess/: __init__.py  analyze.py  config.py  extract.py  process.py  run.py  tree_sitter_definitions.json
src/eval/: analysis.py  codebleu_adapter.py  config.py  evaluate_models.py  generation.py  metrics.py  prepare_benchmark.py  utils.py
src/evaluate/: analyze.py  benchmark.py  config.py  evaluate.py  generate.py  metrics.py  run.py
src/finetune/: config.py  model.py  run.py  train.py
src/preprocess/: config.py  extractor.py  processor.py  run.py
tests/codefinetuner/: test_pipeline.py
tests/config/: codefinetuner_config.yaml
tests/convert/: test_config.py  test_run.py
tests/data/eval/: eval_test.c
tests/data/test/: test_test.c
tests/data/train/: train_test.c
tests/evaluate/: test_analyze.py  test_benchmark.py  test_config.py  test_evaluate.py  test_generate.py  test_metrics.py  test_run.py
tests/finetune/: test_config.py  test_model.py  test_run.py  test_train.py
tests/models/Qwen2.5-Coder-0.5B/: config.json
tests/outputs/evaluate/datasets/: benchmark_dataset.jsonl
tests/outputs/finetune/results/: trainer_log.json
tests/outputs/finetune/results/lora_model/: tokenizer_config.json
tests/outputs/preprocess/results/datasets/: eval_dataset.jsonl  test_dataset.jsonl  train_dataset.jsonl
tests/preprocess/: test_analyze.py  test_config.py  test_extract.py  test_process.py  test_run.py
