[build-system]
requires = ["hatchling", "hatch-vcs"]  # hatch-vcs used to sync versioning with latest git tag number 
build-backend = "hatchling.build"

[project]
name = "codefinetuner"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "cuolm", email = "cuolm.approach717@passinbox.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
]
dependencies = [
    "bitsandbytes==0.48.2; sys_platform == 'linux' or sys_platform == 'win32'",
    "datasets>=4.3.0",
    "evaluate>=0.4.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "peft>=0.17.1",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "tree-sitter>=0.22.0,<0.23.0",
    "tree-sitter-language-pack>=0.2.0",
    "codebleu>=0.7.0",
    "nltk>=3.9.2",
    "omegaconf>=2.3.0",
    "gguf>=0.18.0",
    "sentencepiece>=0.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
codefinetuner = "codefinetuner.pipeline:main"  

[project.urls]
Homepage = "https://github.com/cuolm/codefinetuner"
Repository = "https://github.com/cuolm/codefinetuner.git"
Issues = "https://github.com/cuolm/codefinetuner/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/codefinetuner"]
