[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme"]  # hatch-vcs used to sync versioning with latest git tag number 
build-backend = "hatchling.build"

[project]
name = "codefinetuner"
dynamic = ["version", "readme"]
description = "Add your description here"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "cuolm", email = "cuolm.approach717@passinbox.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
]
dependencies = [
    "bitsandbytes==0.48.2; sys_platform == 'linux' or sys_platform == 'win32'",
    "datasets>=4.3.0",
    "evaluate>=0.4.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "peft>=0.17.1",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "tree-sitter>=0.22.0,<0.23.0",
    "tree-sitter-language-pack>=0.2.0",
    "codebleu>=0.7.0",
    "nltk>=3.9.2",
    "omegaconf>=2.3.0",
    "gguf>=0.18.0",
    "sentencepiece>=0.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[project.scripts]
codefinetuner = "codefinetuner.pipeline:main"  

[project.urls]
Homepage = "https://github.com/cuolm/codefinetuner"
Repository = "https://github.com/cuolm/codefinetuner.git"
Issues = "https://github.com/cuolm/codefinetuner/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]  # add src to sys.path when pytest runs
testpaths = ["tests"]  # make pytest only discover tests under tests/
addopts = "--import-mode=importlib --ignore=third_party"  # importlib-based importing for test modules, avoid third_party module tests

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

# RULE 1: Fixes [text](relative/path) links
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\[(.+?)\]\(((?!https?://)\S+?)\)'
replacement = '[\1](https://github.com/cuolm/codefinetuner/tree/master\g<2>)'

# RULE 2: Fixes <img src="docs/..."> tags
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = 'src="[\/]?docs\/(.+?)"'
replacement = 'src="https://raw.githubusercontent.com/cuolm/codefinetuner/master/docs/\1"'

[tool.hatch.build.targets.wheel]
packages = ["src/codefinetuner"]
